using vertical-align to replace buggy position absolute

--- a/public/beta-signup/styles/main.css
+++ b/public/beta-signup/styles/main.css
@@ -79,12 +79,8 @@ span, .header-content h2 span, div a{
 
 .message-wrapper{
     display: inline-block;
-    /*
     overflow: hidden;
-    position: absolute;
-    margin-left: 7px;
-    left: 445px;
-    */
+    vertical-align: top;
 }
 
 .header-content span{
